# masonite-i18n

./: .editorconfig  .gitignore  BLESSING.md  LICENSE  MANIFEST.in  Pipfile  README.md  setup.cfg  setup.py
lang/: __init__.py  integration.py  providers.py
lang/commands/: AddCommand.py  BaseCommand.py  InstallCommand.py  LangCommand.py  LangInstallCommand.py  NewCommand.py
lang/core/: __init__.py  parser.py
lang/core/parser/: __init__.py  file.py  helpers.py  item.py  param.py
lang/helpers/: __init__.py
lang/helpers/filesystem/: __init__.py  openers.py
lang/providers/: InstallProvider.py
lang/snippets/configs/: language.py  locale.py
lang/snippets/locales/: README.md  icu_af-NA.json  icu_af-ZA.json  icu_af.json  icu_agq-CM.json  icu_agq.json  icu_ak-GH.json  icu_ak.json  icu_am-ET.json  icu_am.json  icu_ar-001.json  icu_ar-AE.json  icu_ar-BH.json  icu_ar-DZ.json  icu_ar-EG.json  icu_ar-IQ.json  icu_ar-JO.json  icu_ar-KW.json  icu_ar-LB.json  icu_ar-LY.json  icu_ar-MA.json  icu_ar-OM.json  icu_ar-QA.json  icu_ar-SA.json  icu_ar-SD.json  icu_ar-SY.json  icu_ar-TN.json  icu_ar-YE.json  icu_ar.json  icu_as-IN.json  icu_as.json  icu_asa-TZ.json  icu_asa.json  icu_az-Cyrl-AZ.json  icu_az-Cyrl.json  (+460 more)
locale/: integration.py
locale/configs/: application.py  locale.py
tests/: test_commands_installcommand.py  test_commands_newcommand.py  test_core_parser.py  test_lang_commands_installcommand.py
tests/parser/: html_file.html  html_jinja2_file.html  python_file.py.code  simple_text_file.txt  txt_file.txt  😀_file.emoji
tools/: formatter.sh  linter.sh  tester.sh
(+8 files in other folders)
