[metadata]
description-file = README.md

[flake8]
import-order-style = google
application-import-names = lang
exclude = .git,*migrations*,__pycache__,*.pyc
max-line-length = 119
# W503 line break before binary operator warnings is not PEP 8 compliant, you should tell Flake8 to ignore these warnings.
ignore = W503
